--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<h2>論文詳細</h2>
+<p>タイトル: <%= @article.title %></p>
+<%= simple_format(@article.body) %>
+<%= link_to "一覧に戻る", '#' %>
+<%= link_to "編集", '#' %>
+<%= link_to "削除", article_path(@article), method: :delete, data: { confirm: "削除してよろしいですか？" } %>
