--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<div class="row">
+  <div class="col-md-4">
+    <h2 class="mt-3">論文編集</h2>
+      <%= form_with model: @article, local: true do |f| %>
+        <div class="form-group">
+          <%= f.label "論文タイトル" %>
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label "本文" %>
+          <%= f.text_area :body, class: "form-control" %>
+        </div>
+        <%= f.submit "編集" %>
+      <% end %>
+    </div>
+</div>
