--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h2 class="mt-3">論文一覧</h2>
+<% @articles.each do |article|  %>
+  <p><%= link_to article.title, article_path(article) %></p>
+<% end  %>
+<%= link_to "新規論文投稿", new_article_path %>
