--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
-<h2>論文詳細</h2>
+<h2 class="mt-3">論文詳細</h2>
 <p>タイトル: <%= @article.title %></p>
 <%= simple_format(@article.body) %>
-<%= link_to "一覧に戻る", '#' %>
+<%= link_to "一覧に戻る", articles_path %>
 <%= link_to "編集", edit_article_path %>
 <%= link_to "削除", article_path(@article), method: :delete, data: { confirm: "削除してよろしいですか？" } %>
