--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-md-4">
-    <h2 class="mt-3">新規論文登録</h2>
-      <%= form_with model: @article, local: true do |f| %>
-        <div class="form-group">
-          <%= f.label "論文タイトル" %>
-          <%= f.text_field :title, class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label "本文" %>
-          <%= f.text_area :body, class: "form-control" %>
-        </div>
-        <%= f.submit "投稿" %>
-      <% end %>
+    <h2 class="mt-3">新規論文投稿</h2>
+    <%= form_with model: @article, local: true do |f| %>
+      <div class="form-group">
+        <%= f.label "論文タイトル" %>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label "本文" %>
+        <%= f.text_area :body, class: "form-control" %>
+      </div>
+      <%= f.submit "投稿" %>
+    <% end %>
   </div>
 </div>
